banner overflow fixed

--- a/app/assets/stylesheets/components/_video_banner.scss
+++ b/app/assets/stylesheets/components/_video_banner.scss
@@ -2,7 +2,7 @@
 #myVideo {
 right: 0;
 top: 50px;
-min-width: 100%;
+width: 100%;
 height: 100%;
 object-fit: cover;
 }
